Cherry-pick r283818. rdar://problem/85173568

RegExpExec can't statically prove which of the two structures it will get in AI by just looking at the RegExp*
    https://bugs.webkit.org/show_bug.cgi?id=231382
    <rdar://83722151>

    Reviewed by Mark Lam.

    JSTests:

    * stress/reg-exp-exec-cant-prove-which-structure-it-produces-in-ai.js: Added.
    (foo):

    Source/JavaScriptCore:

    Because of the RegExp.prototype.compile API, we don't know if the RegExp
    produced by RegExpExec will have indices or not, because that bit of
    information can be reset by the RegExp.prototype.compile API. So, we
    conservatively say that it can produce either structure.

    * dfg/DFGAbstractInterpreterInlines.h:
    (JSC::DFG::AbstractInterpreter<AbstractStateType>::executeEffects):

    Canonical link: https://commits.webkit.org/242709@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283818 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/240672.392@safari-612-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612-branch@285462 268f45cc-cd09-0410-ab3c-d52691b4dbfc